# hydeMyPII

./: .gitignore  README.md  install_polish_language.bat  pyproject.toml  requirements.txt  run_gui.bat  run_gui.py
sanitized_final/: marriage certificate.sanitized.txt
sanitized_improved/: marriage certificate.sanitized.txt
sanitized_improved2/: marriage certificate.sanitized.txt
sanitized_improved3/: marriage certificate.sanitized.txt
src/hydemypii/: __main__.py  cli.py  detector.py  extractor.py  faker_engine.py  gui.py  redactor.py  types.py
